--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/poppins": "^4.4.5",
+    "argon2": "^0.28.2",
     "dotenv": "^10.0.0",
     "framer-motion": "^4",
     "mongodb": "^3.6.9",
